# agentic_rag_qdrant

./: .gitignore  RAG_IMPROVEMENTS_SUMMARY.md  README.md  docker-compose-opik.yml  pyproject.toml  requirements.txt  streamlit_app.py
docs/: Makefile  build.bat  build.sh  conf.py  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree  usage.doctree
docs/_build/doctrees/api/: agentic_rag.crews.check_crew.doctree  agentic_rag.crews.doctree  agentic_rag.crews.rag_crew.doctree  agentic_rag.doctree  agentic_rag.tools.doctree  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  configuration.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: configuration.doctree  index.doctree  installation.doctree  quickstart.doctree  usage.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: configuration.rst.txt  index.rst.txt  quickstart.rst.txt
docs/api/: agentic_rag.crews.check_crew.rst  agentic_rag.crews.rag_crew.rst  agentic_rag.crews.rst  agentic_rag.rst  agentic_rag.tools.rst  index.rst
docs/architecture/: crews.rst
docs/evaluation/: metrics.rst  ragas.rst  setup.rst
document/: France.txt  bancario.md  energia.md
output/: final_report.md  ragas_metrics-XWPW050N2J.csv  report.md  web_search_results.md
src/agentic_rag/: main.py  main.py.backup
src/agentic_rag/tools/: __init__.py  rag_module.py  rag_tool.py  web_search_module.py
test_ragas/: rag_ragas_qdrant.py  ragas_test.py  requirements.txt
test_ragas/output/: ragas_metrics.csv
(+48 files in other folders)
